// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ui/Avatar should do a snapshot test of the Avatar DOM with four elements 1`] = `
<DocumentFragment>
  <div
    class=" sendbird-avatar"
    role="button"
    style="height: 56px; width: 56px; z-index: 0; left: 0px; border: 0px;"
    tabindex="0"
  >
    <div
      class="sendbird-avatar--inner__four-child"
    >
      <div
        class="sendbird-avatar-img sendbird-image-renderer"
        style="width: 100%; min-width: min(400px, 56px); max-width: 400px;"
      >
        <div
          class="sendbird-image-renderer__image"
          style="width: 100%; min-width: min(400px, 56px); max-width: 400px; position: absolute; background-repeat: no-repeat; background-position: center; background-size: cover; background-image: url(https://avatars3.githubusercontent.com/u/46333979?s=460&v=4);"
        />
        <img
          alt=""
          class="sendbird-image-renderer__hidden-image-loader"
          src="https://avatars3.githubusercontent.com/u/46333979?s=460&v=4"
        />
      </div>
      <div
        class="sendbird-avatar-img sendbird-image-renderer"
        style="width: 100%; min-width: min(400px, 56px); max-width: 400px;"
      >
        <div
          class="sendbird-image-renderer__image"
          style="width: 100%; min-width: min(400px, 56px); max-width: 400px; position: absolute; background-repeat: no-repeat; background-position: center; background-size: cover; background-image: url(https://avatars1.githubusercontent.com/u/1384313?s=460&v=4);"
        />
        <img
          alt=""
          class="sendbird-image-renderer__hidden-image-loader"
          src="https://avatars1.githubusercontent.com/u/1384313?s=460&v=4"
        />
      </div>
      <div
        class="sendbird-avatar-img sendbird-image-renderer"
        style="width: 100%; min-width: min(400px, 56px); max-width: 400px;"
      >
        <div
          class="sendbird-image-renderer__image"
          style="width: 100%; min-width: min(400px, 56px); max-width: 400px; position: absolute; background-repeat: no-repeat; background-position: center; background-size: cover; background-image: url(https://avatars2.githubusercontent.com/u/11382805?s=460&v=4);"
        />
        <img
          alt=""
          class="sendbird-image-renderer__hidden-image-loader"
          src="https://avatars2.githubusercontent.com/u/11382805?s=460&v=4"
        />
      </div>
      <div
        class="sendbird-avatar-img sendbird-image-renderer"
        style="width: 100%; min-width: min(400px, 56px); max-width: 400px;"
      >
        <div
          class="sendbird-image-renderer__image"
          style="width: 100%; min-width: min(400px, 56px); max-width: 400px; position: absolute; background-repeat: no-repeat; background-position: center; background-size: cover; background-image: url();"
        />
        <img
          alt=""
          class="sendbird-image-renderer__hidden-image-loader"
          src=""
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ui/Avatar should do a snapshot test of the Avatar DOM with single element 1`] = `
<DocumentFragment>
  <div
    class=" sendbird-avatar"
    role="button"
    style="height: 56px; width: 56px; z-index: 0; left: 0px; border: 0px;"
    tabindex="0"
  >
    <div
      class="sendbird-avatar-img sendbird-image-renderer"
      style="width: 100%; min-width: min(400px, 56px); max-width: 400px;"
    >
      <div
        class="sendbird-image-renderer__image"
        style="width: 100%; min-width: min(400px, 56px); max-width: 400px; position: absolute; background-repeat: no-repeat; background-position: center; background-size: cover; background-image: url(https://avatars3.githubusercontent.com/u/46333979?s=460&v=4);"
      />
      <img
        alt=""
        class="sendbird-image-renderer__hidden-image-loader"
        src="https://avatars3.githubusercontent.com/u/46333979?s=460&v=4"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`ui/Avatar should do a snapshot test of the Avatar DOM with three elements 1`] = `
<DocumentFragment>
  <div
    class=" sendbird-avatar"
    role="button"
    style="height: 56px; width: 56px; z-index: 0; left: 0px; border: 0px;"
    tabindex="0"
  >
    <div
      class="sendbird-avatar--inner__three-child--upper"
    >
      <div
        class="sendbird-avatar-img sendbird-image-renderer"
        style="width: 100%; min-width: min(400px, 56px); max-width: 400px;"
      >
        <div
          class="sendbird-image-renderer__image"
          style="width: 100%; min-width: min(400px, 56px); max-width: 400px; position: absolute; background-repeat: no-repeat; background-position: center; background-size: cover; background-image: url(https://avatars3.githubusercontent.com/u/46333979?s=460&v=4);"
        />
        <img
          alt=""
          class="sendbird-image-renderer__hidden-image-loader"
          src="https://avatars3.githubusercontent.com/u/46333979?s=460&v=4"
        />
      </div>
    </div>
    <div
      class="sendbird-avatar--inner__three-child--lower"
    >
      <div
        class="sendbird-avatar-img sendbird-image-renderer"
        style="width: 100%; min-width: min(400px, 56px); max-width: 400px;"
      >
        <div
          class="sendbird-image-renderer__image"
          style="width: 100%; min-width: min(400px, 56px); max-width: 400px; position: absolute; background-repeat: no-repeat; background-position: center; background-size: cover; background-image: url(https://avatars1.githubusercontent.com/u/1384313?s=460&v=4);"
        />
        <img
          alt=""
          class="sendbird-image-renderer__hidden-image-loader"
          src="https://avatars1.githubusercontent.com/u/1384313?s=460&v=4"
        />
      </div>
      <div
        class="sendbird-avatar-img sendbird-image-renderer"
        style="width: 100%; min-width: min(400px, 56px); max-width: 400px;"
      >
        <div
          class="sendbird-image-renderer__image"
          style="width: 100%; min-width: min(400px, 56px); max-width: 400px; position: absolute; background-repeat: no-repeat; background-position: center; background-size: cover; background-image: url(https://avatars2.githubusercontent.com/u/11382805?s=460&v=4);"
        />
        <img
          alt=""
          class="sendbird-image-renderer__hidden-image-loader"
          src="https://avatars2.githubusercontent.com/u/11382805?s=460&v=4"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ui/Avatar should do a snapshot test of the Avatar DOM with two elements 1`] = `
<DocumentFragment>
  <div
    class=" sendbird-avatar"
    role="button"
    style="height: 56px; width: 56px; z-index: 0; left: 0px; border: 0px;"
    tabindex="0"
  >
    <div
      class="sendbird-avatar--inner__two-child"
    >
      <div
        class="sendbird-avatar-img sendbird-image-renderer"
        style="width: 100%; min-width: min(400px, 56px); max-width: 400px;"
      >
        <div
          class="sendbird-image-renderer__image"
          style="width: 100%; min-width: min(400px, 56px); max-width: 400px; position: absolute; background-repeat: no-repeat; background-position: center; background-size: cover; background-image: url(https://avatars3.githubusercontent.com/u/46333979?s=460&v=4);"
        />
        <img
          alt=""
          class="sendbird-image-renderer__hidden-image-loader"
          src="https://avatars3.githubusercontent.com/u/46333979?s=460&v=4"
        />
      </div>
      <div
        class="sendbird-avatar-img sendbird-image-renderer"
        style="width: 100%; min-width: min(400px, 56px); max-width: 400px;"
      >
        <div
          class="sendbird-image-renderer__image"
          style="width: 100%; min-width: min(400px, 56px); max-width: 400px; position: absolute; background-repeat: no-repeat; background-position: center; background-size: cover; background-image: url(https://avatars1.githubusercontent.com/u/1384313?s=460&v=4);"
        />
        <img
          alt=""
          class="sendbird-image-renderer__hidden-image-loader"
          src="https://avatars1.githubusercontent.com/u/1384313?s=460&v=4"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ui/Avatar should render default image if src is empty 1`] = `
<DocumentFragment>
  <div
    class=" sendbird-avatar"
    role="button"
    style="height: 56px; width: 56px; z-index: 0; left: 0px; border: 0px;"
    tabindex="0"
  >
    <div
      class="sendbird-avatar-img sendbird-image-renderer"
      style="width: 100%; min-width: min(400px, 56px); max-width: 400px;"
    >
      <div
        class="sendbird-image-renderer__image"
        style="width: 100%; min-width: min(400px, 56px); max-width: 400px; position: absolute; background-repeat: no-repeat; background-position: center; background-size: cover; background-image: url();"
      />
      <img
        alt=""
        class="sendbird-image-renderer__hidden-image-loader"
        src=""
      />
    </div>
  </div>
</DocumentFragment>
`;
